ACLOCAL_AMFLAGS = -I m4 

EXTRA_DIST = README.md LICENSE

SUBDIRS = base \
	tools/fbitconvert \
	tools/fbitdump \
	tools/fbitmerge \
	tools/fbitexpire \
	plugins/storage/fastbit \
	plugins/storage/fastbit_compression \
	plugins/storage/postgres \
	plugins/storage/unirec \
	plugins/storage/json \
	plugins/input/nfdump
